<resources>
    <string name="app_name">Worker Provider</string>
    <string name="login_signup_to_the_app_n_search_what_you_are_looking_for_n_contact_the_worker_as_per_your_need">* LogIn /SignUp to the app\n * Search what you are looking for\n * Contact the worker as per your need</string>
    <string name="employer">Employer :</string>
    <string name="worker">Worker :</string>
    <string name="login_signup_to_the_app_n_enter_your_basic_details_n_verify_your_contact_number">* LogIn / SignUp to the app \n * Enter your basic details \n * Verify your contact number</string>
    <string name="login_as_employer">LogIn as Employer</string>
    <string name="login_as_worker">LogIn as Worker</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="image">Image</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter name</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="create_account">Create account</string>
    <string name="log_out">Log Out</string>
    <string name="your_profile">Your Profile</string>
    <string name="back_to_login">Back to Login</string>
    <string name="delete_account">Delete  Account</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="back">Back</string>
    <string name="enter_phone_number_with_91">Enter phone number with +91</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="phone_number_with_91">Phone number with +91</string>
    <string name="occupation">Occupation :</string>
    <string name="enter_aadhaar_number">Enter aadhaar number</string>
    <string name="experience_in_years">Experience (in years)</string>
    <string name="minimum_wage">Minimum wage</string>
    <string name="address">Address :</string>
    <string name="save_details">Save Details</string>
    <string name="exp">Experience (in years) :</string>
    <string name="daily_wages_in_rs">Daily wages (in Rs) :</string>
    <string name="enter_name2">Enter name :</string>
    <string name="enter_aadhaar_number2">Enter aadhaar number :</string>
    <string name="enter_phone_number2">Enter phone number :</string>
    <string name="edit_details">Edit  Details</string>
    <string name="occupation2">Occupation</string>
    <string name="wages_in_rs">Wages (in Rs) :</string>
</resources>