<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:background="#F8FAFB">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="250dp"
            android:layout_height="155dp"
            android:contentDescription="@string/image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01"
            app:srcCompat="@drawable/img_3" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="#A3A5C9D7"
            android:ems="10"
            android:hint="@string/enter_name2"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textColor="#0D0C0C"
            android:textColorHint="#420606"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/editTextText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.74" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="#A3A5C9D7"
            android:ems="10"
            android:hint="@string/enter_phone_number2"
            android:inputType="number"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textColor="#0D0C0C"
            android:textColorHint="#420606"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText2"
            app:layout_constraintVertical_bias="0.5" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="#A3A5C9D7"
            android:ems="10"
            android:hint="@string/enter_aadhaar_number2"
            android:inputType="number"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textColor="#0D0C0C"
            android:textColorHint="#420606"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.549" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp"
            app:layout_constraintBottom_toTopOf="@+id/registerWorker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.468">

            <TextView
                android:id="@+id/editTextText4"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:background="#A3A5C9D7"
                android:ems="10"
                android:paddingStart="16dp"
                android:paddingTop="14dp"
                android:paddingEnd="8dp"
                android:paddingBottom="12dp"
                android:text="@string/occupation"
                android:textColor="#0D0C0C"
                android:textColorHint="#420606"
                android:textSize="18sp"
                android:textStyle="italic" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginBottom="2dp"
                android:padding="10dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="#A3A5C9D7"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textColor="#0D0C0C"
            android:textColorHint="#420606"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/registerWorker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText6"
            app:layout_constraintVertical_bias="0.125" />

        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="#A3A5C9D7"
            android:ems="10"
            android:hint="@string/exp"
            android:inputType="number"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textColor="#0D0C0C"
            android:textColorHint="#420606"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/editTextText6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.5" />

        <EditText
            android:id="@+id/editTextText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="#A3A5C9D7"
            android:ems="10"
            android:hint="@string/wages_in_rs"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingTop="15dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textColor="#0D0C0C"
            android:textColorHint="#420606"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/registerWorker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.368" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerWorker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_background_3"
            android:text="save   details"
            android:textColor="#2E161F"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.92" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>